--- a/andrew-react/package.json
+++ b/andrew-react/package.json
@@ -4,10 +4,10 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.7.0",
-    "@material-ui/styles": "^4.6.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.2.0"
+    "react-scripts": "3.2.0",
+    "@material-ui/icons": "latest"
   },
   "scripts": {
     "start": "react-scripts start",
