--- a/andrew-react/package.json
+++ b/andrew-react/package.json
@@ -4,10 +4,11 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.7.0",
+    "@material-ui/icons": "latest",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-scripts": "3.2.0",
-    "@material-ui/icons": "latest"
+    "serve": "^11.2.0"
   },
   "scripts": {
     "dev": "react-scripts start",
