Added aws region to travis config and specified pipeline to only run on master branch

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,5 @@
+if: branch = master
+
 language: node_js
 node_js:
   - "stable"
@@ -14,3 +16,4 @@ deploy:
   bucket: "andrew-fabian-website"
   local_dir: "build"
   skip_cleanup: true
+  region: us-west-2
