--- a/.travis.yml
+++ b/.travis.yml
@@ -17,3 +17,6 @@ deploy:
   local_dir: "build"
   skip_cleanup: true
   region: us-west-2
+
+after_deploy:
+  - aws cloudfront create-invalidation --distribution-id E1E6NAY17UFOG4 --paths "/*"
